src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Active_Nokia_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req #428: Users not in corp directory</description>
        <label>Active Nokia Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_User__c</fullName>
        <formula>if(IsActive,&quot;Active&quot;,&quot;InActive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please input any helpful comments in this field.</inlineHelpText>
        <label>Admin Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Approval Level_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Next Level Approver_OBSOLETE</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Auto_Deactivation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto Deactivation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Case_Handling_Internal_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Handling Internal Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_CheckEmailsAreNotEquals__c</fullName>
        <description>4622 : This is backend field which is set to true when the old email custom value and email value both are not equal.</description>
        <formula>IF( Email  &lt;&gt;  CH_OldEmail__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckEmailsAreNotEquals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_LastCaseAssigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Case Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_LastEngagement__c</fullName>
        <description>NOKIASC-29471:Incident Manager Case Assignment via “Round Robin”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Engagement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_OldEmail__c</fullName>
        <description>4622 : This is a backend field used to store old email value of user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OldEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSP_HERA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin only:  denotes inactive user retains sales roles/territories for downstream systems</description>
        <inlineHelpText>To be checked by admin if user&apos;s sales/roles/territories must remain for downstream systems</inlineHelpText>
        <label>CSP/HERA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_op_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>D-8415</description>
        <label>Co-op User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country field built for User. Requirement - 615. Also a parent field in dependency between Country and Market</description>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius And Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCP_deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCP Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Deactivate_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked in case user has exception of being deactivated under any policy</description>
        <inlineHelpText>This field should be checked in case user has exception of being deactivated</inlineHelpText>
        <label>Do Not Deactivate User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_Deactivate_Modified_Date__c</fullName>
        <description>Will populate last modified date of field &quot;Do Not Deactivate User&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Do not Deactivate Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_not_deactivate_reason__c</fullName>
        <description>This is the ensure why the user should not be deactivated</description>
        <inlineHelpText>Please select appropriate reason for not deactivating the user</inlineHelpText>
        <label>Do not deactivate reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approver / stakeholder</fullName>
                </value>
                <value>
                    <fullName>Senior Leader</fullName>
                </value>
                <value>
                    <fullName>Integration User</fullName>
                </value>
                <value>
                    <fullName>Work Group Leader</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin only:  denotes inactive user retains sales roles/territories for downstream systems</description>
        <inlineHelpText>Please note: ERM user only. Does not require Sales Role or Territory.</inlineHelpText>
        <label>ERM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLT_Assistant__c</fullName>
        <label>GLT Assistant</label>
        <relationshipName>GLT_Assistant</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>GLT_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GLT Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_My_Desktop_View__c</fullName>
        <label>My Desktop View</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SWS Tickets</fullName>
                    <default>true</default>
                    <label>SWS Tickets</label>
                </value>
                <value>
                    <fullName>HWS Tickets</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Page_Layout__c</fullName>
        <label>Home Page Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DB1</fullName>
                </value>
                <value>
                    <fullName>DB2</fullName>
                </value>
                <value>
                    <fullName>DB3</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITA_IFM_By_Triggers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Key_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Key User ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoA_Lockout_Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It was implemented because of issues to upload LoA.</description>
        <inlineHelpText>Selected users are allowed to upload documents during down time.</inlineHelpText>
        <label>Announce Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoA_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin only: denotes inactive user retains sales roles/territories</description>
        <inlineHelpText>To be checked by admin if user&apos;s sales/roles/territories must remain</inlineHelpText>
        <label>LoA Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lockout_Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected user is excluded from user lockouts during deployments.</inlineHelpText>
        <label>Lockout Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Market field Built for requirement - 615. Dependent on Country field</description>
        <label>User Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market North America</fullName>
                </value>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
                <value>
                    <fullName>Market Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Market India</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market Asia Pacific &amp; Japan</fullName>
                </value>
                <value>
                    <fullName>MARKET AMERICA</fullName>
                    <isActive>false</isActive>
                    <label>MARKET AMERICA</label>
                </value>
                <value>
                    <fullName>MARKET ASIA AND JAPAN</fullName>
                    <isActive>false</isActive>
                    <label>MARKET ASIA AND JAPAN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_CDB_Contact_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CDB Contact ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_Group_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For audience POC. Checking this box gives access to the Collaboration tab in the Customer community for this user.</description>
        <inlineHelpText>Checking this box gives access to the Collaboration tab in the Customer community for this user.</inlineHelpText>
        <label>Group Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_HR_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HR ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Horizontal_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Horizontal Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_IsHorizontal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horizontal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Last_Act_As_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NCP Last Act As User</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_NSN_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSN ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_Relationship__c</fullName>
        <label>Relationship with Nokia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Sub Contractor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                    <label>Independent  Contractor</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Independent Contractor</fullName>
                    <isActive>false</isActive>
                    <label>Independent Contractor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_SSOPID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSOPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Update_Information_in_IAM__c</fullName>
        <defaultValue>&quot;https://online.networks.nokia.com/nam/myProfile.faces&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>In order to update information like address, phone, etc, please click on the url below</inlineHelpText>
        <label>Update Your Profile(such as address,etc)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NCP_Update_Profile__c</fullName>
        <formula>If($User.Id=Left(User_18_Digit_ID__c,15),NCP_Update_Information_in_IAM__c,&apos;&apos;)</formula>
        <label>Update Your Profile (name, address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NED_Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field is an identifier on the user record if admin needs to enrich the user with NED information.</description>
        <inlineHelpText>Enable this checkbox to update the user record based on NED. After successful data update from NED, the field will be automatically unchecked.</inlineHelpText>
        <label>NED Update Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSA_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to check whether the user is NSA Compliant or not.</description>
        <label>NSA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSA_Expiration_Date__c</fullName>
        <description>This field is for storing the Expiration date for NSA user based on which NSA Compliant flag will be cheked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NSA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSA_Modified__c</fullName>
        <description>To track the changes on the field NSA Compliant Checkbox. Req #799</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NSA Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nam_UID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Nam UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaUID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NokiaUID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_ID__c</fullName>
        <description>Added custom field &apos;Nokia ID&apos; of type text(12) added for Req #061
Bandhan (hyper care time) : Marked this field as External ID field so that we can use it to connect with external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Nokia ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_AUTHENTICATION_DATE__c</fullName>
        <description>PK: 06/04/2017: Integration &amp; Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AUTHENTICATION DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRM_AUTHENTICATION_STATUS__c</fullName>
        <description>PK: 06/04/2017: Integration &amp; Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AUTHENTICATION_STATUS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_EMAIL_COUNT__c</fullName>
        <description>PK: 06/04/2017: Integration &amp; Migration</description>
        <label>EMAIL COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRM_LAST_EMAIL_DATE__c</fullName>
        <description>PK: 06/04/2017: Integration &amp; Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LAST EMAIL DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRM_REQUESTED_DATE__c</fullName>
        <description>PK: 06/04/2017: Integration &amp; Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>REQUESTED DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reactivation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restriction_Level__c</fullName>
        <description>Used as global PickList for user level</description>
        <label>Restriction Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DocumentRestriction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Certified_Administrator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated if the user is a Salesforce Certified Administrator</inlineHelpText>
        <label>SFDC Certified Administrator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role_Approval_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Role_Approval Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>User 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Cost_Center_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Cost Center Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Cost_Center__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>update_auto_deactivation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>update auto deactivation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Users_with_Department</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users with Department</label>
    </listViews>
    <listViews>
        <fullName>Admin_Users_Active</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>NSA_Compliant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>System Admin Users - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CH_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>CH_</value>
        </filters>
        <label>CH Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ECT_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Nokia ECT</value>
        </filters>
        <label>ECT Users</label>
    </listViews>
    <listViews>
        <fullName>NSA_Compliant</fullName>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>NSA_Modified__c</columns>
        <columns>NSA_Compliant__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NSA_Compliant__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NSA Compliant</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partners</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partners</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global</role>
        </sharedTo>
    </listViews>
</CustomObject>